--- a/University/Pages/Courses.css
+++ b/University/Pages/Courses.css
@@ -59,7 +59,7 @@
         list-style: none;
         display: flex;
         gap: 30px;
-        margin-left: 550px;
+        margin-left: auto;
       }
 
       .menu li a {
@@ -78,6 +78,110 @@
         font-weight: bold;
       }
 
+      .apply-btn-mobile {
+          display: none;
+      }
+
+      /* Hamburger Menu */
+      .hamburger {
+        display: none;
+        font-size: 24px;
+        cursor: pointer;
+      }
+
+     @media (max-width: 992px) {
+  /* TOPBAR */
+  .topbar {
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+    text-align: center;
+    padding: 15px 20px;
+  }
+
+  .topbar .right {
+    display: none;
+  }
+
+  .topbar .left {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 10px 15px;
+  }
+
+  .topbar .right a {
+    margin-left: 0;
+  }
+
+  /* NAVBAR */
+  .navbar {
+    flex-wrap: wrap;
+    justify-content: space-between;
+    height: auto;
+    padding: 12px;
+    height: 80px;
+    padding: 15px 20px;
+  }
+  
+  .hamburger {
+      display: block;
+      position: relative;
+      z-index: 2001;
+  }
+
+  .menu {
+    display: none;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    text-align: center;
+    gap: 15px;
+    position: fixed;
+    top: 0;
+    right: -100%;
+    width: 250px;
+    height: 100vh;
+    background: #000;
+    box-shadow: -2px 0 5px rgba(0,0,0,0.1);
+    padding: 80px 0 0 20px;
+    transition: 0.4s;
+    z-index: 2000;
+    text-align: left;
+    gap: 20px;
+    margin-left: 0;
+    margin-top: 20px;
+    order: 3;
+    margin-top: 0;
+  }
+  
+  .menu li a {
+    color: white;
+  }
+
+  .menu.active {
+    display: flex;
+    right: 0;
+  }
+
+  .apply-btn {
+    display: none;
+  }
+
+  .apply-btn-mobile {
+      display: block;
+  }
+  
+  .apply-btn-mobile a {
+    background: #f4b400;
+    padding: 10px 20px;
+    border-radius: 25px;
+    text-decoration: none;
+    color: white;
+    font-weight: bold;
+    display: inline-block;
+  }
+}
       /* Hamburger Menu */
       .hamburger {
         display: none;
