--- a/University/Pages/Privacy Policy.css
+++ b/University/Pages/Privacy Policy.css
@@ -2,13 +2,15 @@
       /* TOP BAR */
 
       
+     
+      /* TOP BAR */
+
       * {
         margin: 0;
         padding: 0;
         box-sizing: border-box;
         font-family: sans-serif;
       }
-
 
       .topbar {
         background: #1e2a78;
@@ -79,11 +81,111 @@
         color: white;
         font-weight: bold;
       }
-      .hero {
-        display: flex;
-        height: 90vh;
+
+      .apply-btn-mobile {
+          display: none;
       }
 
+      /* Hamburger Menu */
+      .hamburger {
+        display: none;
+        font-size: 24px;
+        cursor: pointer;
+      }
+
+     @media (max-width: 992px) {
+  /* TOPBAR */
+  .topbar {
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+    text-align: center;
+    padding: 15px 20px;
+  }
+
+  .topbar .right {
+    display: none;
+  }
+
+  .topbar .left {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 10px 15px;
+  }
+
+  .topbar .right a {
+    margin-left: 0;
+  }
+
+  /* NAVBAR */
+  .navbar {
+    flex-wrap: wrap;
+    justify-content: space-between;
+    height: auto;
+    padding: 12px;
+    height: 80px;
+    padding: 15px 20px;
+  }
+  
+  .hamburger {
+      display: block;
+      position: relative;
+      z-index: 2001;
+  }
+
+  .menu {
+    display: none;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    text-align: center;
+    gap: 15px;
+    position: fixed;
+    top: 0;
+    right: -100%;
+    width: 250px;
+    height: 100vh;
+    background: #000;
+    box-shadow: -2px 0 5px rgba(0,0,0,0.1);
+    padding: 80px 0 0 20px;
+    transition: 0.4s;
+    z-index: 2000;
+    text-align: left;
+    gap: 20px;
+    margin-left: 0;
+    margin-top: 20px;
+    order: 3;
+    margin-top: 0;
+  }
+  
+  .menu li a {
+    color: white;
+  }
+
+  .menu.active {
+    display: flex;
+    right: 0;
+  }
+
+  .apply-btn {
+    display: none;
+  }
+
+  .apply-btn-mobile {
+      display: block;
+  }
+  
+  .apply-btn-mobile a {
+    background: #f4b400;
+    padding: 10px 20px;
+    border-radius: 25px;
+    text-decoration: none;
+    color: white;
+    font-weight: bold;
+    display: inline-block;
+  }
+}
 
  
       .right-contact-main-container {
